--- a/pothole-app/package.json
+++ b/pothole-app/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "AWS Amplify JavaScript Example",
   "dependencies": {
-    "aws-amplify": "^1.1.19"
+    "aws-amplify": "^1.1.19",
+    "react": "^16.8.3"
   },
   "devDependencies": {
     "webpack": "^4.17.1",
