Created dynamo table. Wrote script to move csvs to dynamo. Modified signIn screen from template, may not use.

--- a/potholeMobile/package.json
+++ b/potholeMobile/package.json
@@ -12,10 +12,17 @@
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
+    "amplify": "0.0.11",
+    "aws-amplify": "^1.1.19",
+    "aws-amplify-react-native": "^2.1.7",
     "expo": "^32.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
-    "react-navigation": "^3.0.9"
+    "react-native-keyboard-aware-scroll-view": "^0.8.0",
+    "react-native-maps": "^0.23.0",
+    "react-native-material-textfield": "^0.12.0",
+    "react-navigation": "^3.0.9",
+    "save": "^2.3.3"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
