--- a/pothole-app/amplify/backend/backend-config.json
+++ b/pothole-app/amplify/backend/backend-config.json
@@ -4,5 +4,11 @@
 			"service": "Cognito",
 			"providerPlugin": "awscloudformation"
 		}
+	},
+	"storage": {
+		"DynamoDB": {
+			"service": "DynamoDB",
+			"providerPlugin": "awscloudformation"
+		}
 	}
 }
