--- a/pothole-app/package.json
+++ b/pothole-app/package.json
@@ -4,13 +4,20 @@
   "description": "AWS Amplify JavaScript Example",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
+    "amplify": "0.0.11",
     "aws-amplify": "^1.1.19",
-    "react": "^16.8.3"
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "copy-webpack-plugin": "^4.5.2",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
-    "copy-webpack-plugin": "^4.5.2",
     "webpack-dev-server": "^3.1.5"
   },
   "scripts": {
